sites/_shared/assets/section-image-with-text.css
.image-with-text {
  margin: 3.5rem auto;
}

@media screen and (min-width: 750px) {
  .image-with-text {
    margin-top: 6rem;
    margin-bottom: calc(8rem + var(--page-width-margin));
  }
}

.image-with-text .grid {
  margin: 0 auto;
}

.image-with-text__grid {
  overflow: hidden;
}

.image-with-text--none {
  margin: 3.5rem auto 0;
  padding: 0 0 3.5rem;
}

@media screen and (min-width: 750px) {
  .image-with-text--none {
    margin: 0;
    padding: 0;
  }

  .image-with-text.image-with-text--none .grid--2-col-tablet .grid__item {
    max-width: 50%;
  }

  .image-with-text .grid {
    justify-content: space-between;
  }

  .image-with-text .grid--2-col-tablet .grid__item {
    max-width: 49%;
  }
}

.image-with-text__media {
  background-color: transparent;
  min-height: 100%;
  margin: 0;
}

.category-landing .image-with-text__content {
  justify-content: center;
}

@media screen and (min-width: 750px) {
  .image-with-text__grid--reverse {
    flex-direction: row-reverse;
  }
}

@media screen and (max-width: 749px) {
  .image-with-text__grid--reverse-mobile {
    flex-direction: column-reverse;
  }

  .category-landing .image-with-text__content {
    padding: 5rem 2rem;
  }
}

.image-with-text__media-item--small {
  max-width: 14.5rem !important;
  margin: 0 auto;
}

@media screen and (min-width: 750px) {
  .image-with-text__media-item--small {
    max-width: 42rem !important;
    margin: 0 auto;
  }
}

@media screen and (max-width: 749px) {
  .image-with-text__media-item--mobile-small .image-with-text__media,
  .image-with-text__media-item--mobile-small .image-with-text__media img {
    height: 14.5rem !important;
    padding: initial !important;
  }

  .image-with-text__media-item--mobile-small .image-with-text__media img,
  .image-with-text__media-item--mobile-medium .image-with-text__media img {
    width: auto !important;
    margin: 0 auto;
    position: relative !important;
  }

  .image-with-text__media-item--mobile-medium .image-with-text__media,
  .image-with-text__media-item--mobile-medium .image-with-text__media img {
    height: 24.5rem !important;
    padding: initial !important;
  }
}

.image-with-text__media--placeholder {
  background-color: rgba(var(--color-foreground), 0.04);
  position: relative;
  overflow: hidden;
}

.image-with-text__media--placeholder.image-with-text__media--adapt {
  height: 20rem;
}

@media screen and (min-width: 750px) {
  .image-with-text__media--placeholder.image-with-text__media--adapt {
    height: 30rem;
  }
}

.image-with-text__media--placeholder > svg {
  position: absolute;
  left: 50%;
  max-width: 80rem;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  fill: currentColor;
}

.image-with-text__content {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  height: 100%;
  justify-content: center;
  align-self: center;
  padding: 2rem 0;
}

.image-with-text--none .image-with-text__content {
  padding: 3rem 2rem;
}

.image-with-text__content--mobile-right > * {
  align-self: flex-end;
  text-align: right;
}

.image-with-text__content--mobile-center > * {
  align-self: center;
  text-align: center;
}

.image-with-text--overlap .image-with-text__content {
  transform: translate(0 , -3rem);
  width: 90%;
  margin: 0 auto;
}

@media screen and (min-width: 750px) {
  .image-with-text__content {
    padding: 3rem;
  }

  .image-with-text--normal .image-with-text__grid--reverse .image-with-text__content {
    margin-left: auto;
    padding-left: 0.5rem;
  }

  .image-with-text__content--bottom {
    justify-content: flex-end;
    align-self: flex-end;
  }

  .image-with-text__content--top {
    justify-content: flex-start;
    align-self: flex-start;
  }

  .image-with-text__content--desktop-right > * {
    align-self: flex-end;
    text-align: right;
  }

  .image-with-text__content--desktop-left > * {
    align-self: flex-start;
    text-align: left;
  }

  .image-with-text__content--desktop-center > * {
    align-self: center;
    text-align: center;
  }

  .image-with-text--overlap .image-with-text__text-item {
    display: flex;
    padding: 3rem 0;
  }

  .image-with-text--overlap .image-with-text__content {
    height: auto;
    width: calc(100% + 4rem);
    min-width: calc(100% + 4rem);
    transform: translate(-4rem, 0);
  }

  .image-with-text--overlap .image-with-text__grid--reverse .image-with-text__content {
    transform: translate(4rem, 0);
  }

  .image-with-text--overlap .image-with-text__grid--reverse .image-with-text__text-item {
    justify-content: flex-end;
  }

  .image-with-text--overlap .image-with-text__media-item--top {
    align-self: flex-start;
  }

  .image-with-text--overlap .image-with-text__media-item--middle {
    align-self: center;
  }

  .image-with-text--overlap .image-with-text__media-item--bottom {
    align-self: flex-end;
  }

  .image-with-text__media-item--small,
  .image-with-text__media-item--large + .image-with-text__text-item {
    flex-grow: 0;
  }
}

@media screen and (min-width: 990px) {
  .image-with-text__content,
  .image-with-text--none .image-with-text__content {
    padding: 6rem 4rem 7rem;
  }
}

@media screen and (min-width: 749px) and (max-width: 989px) {
  .image-with-text--none .image-with-text__content {
    padding: 6rem 4rem 7rem;
  }
}

.image-with-text__content > * + * {
  margin-top: 1rem;
  max-width: 49rem;
}

.image-with-text__content > .image-with-text__text:empty ~ a {
  margin-top: 2rem;
}

.image-with-text__content > :first-child:is(.image-with-text__heading),
.image-with-text__text--caption + .image-with-text__heading,
.image-with-text__text--caption:first-child {
  margin-top: 0;
}

.image-with-text__content :last-child:is(.image-with-text__heading),
.image-with-text__text--caption {
  margin-bottom: 0;
}

.image-with-text__content > * + .image-with-text__text,
.image-with-text__content .button + .image-with-text__text {
  margin-top: 1rem;
}

.image-with-text__content .image-with-text__text + .button {
  margin-top: 1rem;
  padding: 0;
}

.image-with-text__eyebrow {
  font-size: 1.8rem;
  line-height: 2.2rem;
}

.image-with-text__heading {
  margin-bottom: 0;
  width: 100%;
  max-width: 44rem;
}

.image-with-text__text p {
  margin-top: 0;
  margin-bottom: 1rem;
}

.category-landing .image-with-text {
  margin-top: 0;
  margin-bottom: 0;
}

.category-landing .image-with-text-section .page-width {
  max-width: unset;
  width: 100%;
  padding: 0;
}

@media screen and (min-width:750px) {
  .category-landing .image-with-text--normal .image-with-text__grid--reverse .image-with-text__content {
    padding-left: 6rem;
  }

  .category-landing .image-with-text__content {
    padding: 6rem 4rem 7rem 6rem;
  }
}

